<resources>
    <string name="app_name">Wireless data transmission</string>
    <string name="send_data_button">SEND DATA</string>
    <string name="send_data_from_google_drive_button">SEND DATA FROM GOOGLE DRIVE</string>
    <string name="get_clipboard_button">GET CLIPBOARD</string>
    <string name="expert_mode">Expert mode</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="list_of_selected_files">List of selected files</string>
    <string name="choose_device">Choose device</string>
    <string name="cancel">Cancel</string>
    <string name="device_name">Device name</string>
    <string name="accepted_file_history">Accepted File History</string>
    <string name="trusted_file_history">Trusted File History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>