<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/navigationViewContentFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:background="#808080">

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="device name"
            android:layout_marginLeft="15dp"
            android:textSize="30sp"/>
    </FrameLayout>

    <Button
        android:id="@+id/navigationViewContentExpertMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_rating"
        android:background="?selectableItemBackgroundBorderless"
        android:text="@string/expert_mode"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/green_01ac8a" />
    <Button
        android:id="@+id/navigationViewContentHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_history_24"
        android:background="?selectableItemBackgroundBorderless"
        android:text="@string/history"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/green_01ac8a" />
    <Button
        android:id="@+id/navigationViewContentSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_settings_24"
        android:background="?selectableItemBackgroundBorderless"
        android:text="@string/settings"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/green_01ac8a" />
</LinearLayout>