<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParametersActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/settingsActivityBackArrowButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/ic_back_arrow"
            app:tint="?attr/colorSecondary"
            tools:ignore="ContentDescription,VectorDrawableCompat" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="7dp"
            android:text="@string/settings"
            android:textColor="?attr/colorSecondary"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/settingsActivityLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/settingsActivitySwitch"
                android:drawableStart="@drawable/ic_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="8dp"
                android:text="@string/expert_mode"
                android:checked="false"
                android:textSize="24sp"
                android:textColor="?attr/colorOnSecondary"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textSize="17sp"
                android:textColor="?attr/colorOnSecondary" />


            <Button
                android:id="@+id/settingsActivityDeviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/device_name"
                android:textSize="24sp"
                android:textColor="?attr/colorOnSecondary"  />

            <Button
                android:id="@+id/settingsActivityHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_history_24"
                android:text="@string/history"
                android:textSize="24sp"
                android:textColor="?attr/colorOnSecondary"  />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>